<resources>
    <string name="app_name">WiraEnergiProject</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    //LoginActivity
    <string name="btn_login">LOGIN</string>
    <string name="txt_sign_up">Sign Up!</string>
    <string name="txt_hint_email">input your email</string>
    <string name="txt_hint_password">input your password</string>
    <string name="title_activity_test_register">TestRegister</string>
    <string name="txtRegister">Create an account!</string>
    <string name="title_activity_register">RegisterActivity</string>

    //RegisterActivity
    <string name="btn_register">REGISTER</string>

    //MainActivity
    <string name="txtVerification">Email Verification Status</string>
    <string name="txtStatus">Success !</string>
    <string name="btnDataCustomer">Input Data Customer</string>
    <string name="btnPrevious">Previous</string>
    <string name="title_activity_form_customer">FormCustomerActivity</string>
    <string name="title_activity_master_customer">MasterCustomerActivity</string>

    //FormCustomerActivity
    <string name="txtMasterCustomer">MASTER CUSTOMER</string>
    <string name="txtStep1">Company Info</string>
    <string name="txtStep2">Contact Info</string>
    <string name="txtStep3">Shipping Info</string>

    <string name="txtID">ID :</string>
    <string name="txtFirstName">First Name :</string>
    <string name="txtAddress">Address :</string>
    <string name="txtCity">City :</string>
    <string name="txtProvince">Province :</string>
    <string name="txtZIP">ZIP Code :</string>
    <string name="txtPhone">Phone</string>
    <string name="txtMobile">Mobile</string>
    <string name="txtFax">Fax</string>
    <string name="txtTerm">Term. :</string>
    <string name="txtValuta">Valuta :</string>
    <string name="txtNPWP">NPWP :</string>
    <string name="txtTax">Tax/PPN :</string>
    <string name="txtActive">Active :</string>
    <string name="txtEmail">Email :</string>
    <string name="txtWebsite">Website :</string>
    <string name="txtNote">Note :</string>
    <string name="txtName">Name :</string>
    <string name="txtPICName">PIC Name :</string>
    <string name="txtETA">ETA :</string>
    <string name="txtMap">Map Coordinate</string>

    <string name="hintID">Auto</string>
    <string name="hintFirstName">input first name</string>
    <string name="hintAddress">input address</string>
    <string name="hintCity">input city</string>
    <string name="hintProvince">input province</string>
    <string name="hintZipCode">input zip code</string>
    <string name="hintTerm">input term</string>
    <string name="hintNPWP">input NPWP</string>
    <string name="hintEmail">input email</string>
    <string name="hintWebsite">input website</string>
    <string name="hintNote">input note</string>
    <string name="hintPICName">input PIC Name</string>
    <string name="hintETA">input ETA</string>

    <string name="btnNext">NEXT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_customer_form">CustomerFormActivity</string>
</resources>
