<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.LoginActivity"
    tools:showIn="@layout/app_bar_login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_row="0"
                android:layout_column="0"
                android:layout_margin="20dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:layout_row="1"
                android:layout_column="0"
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/txt_hint_email"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_row="2"
                android:layout_column="0"
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:inputType="textPassword"
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_hint_password" />
            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/btnLogin"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_login"
                android:background="@color/colorPrimary"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/txtRegister"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/txtRegister"
                android:layout_marginTop="10dp"
                android:textColor="#215440"/>

        </GridLayout>
    </ScrollView>

</LinearLayout>
